Add scheduled cleanup that deletes feeds older than 1 day
Add an hourly @Scheduled task, deleteOldFeeds, that removes feeds whose
published date is more than a day old, backed by a derived
FeedRepository.deleteByPublishedBefore. Using a derived deleteBy query
(not a bulk @Modifying delete) so the J_FEED_IP_HASH join rows are
cleaned up via the entity cascade instead of hitting the FK.

Also replace the deprecated Guava expireAfterWrite(long, TimeUnit) with
expireAfterWrite(Duration).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>